samples/_failures_safe/1761600220_9ff25c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2fe14a36.c:180:1: error: expected ‘{’ at end of input
  180 | void freeGraph(struct
      | ^~~~
